--- a/client-app/src/Pages/CSS/AdminBilling.css
+++ b/client-app/src/Pages/CSS/AdminBilling.css
@@ -1,5 +1,3 @@
-/* src/components/CSS/AdminBilling.css */
-
 .admin-billing {
     padding: 20px;
   }
@@ -10,18 +8,15 @@
   }
   
   .admin-billing table th, .admin-billing table td {
-    border: 1px solid #ddd;
+    border: 1px solid var(--grid);
     padding: 8px;
   }
   
   .admin-billing table th {
-    background-color: #f2f2f2;
+    background-color: var(--shadow-but);
     text-align: left;
   }
   
-  .admin-billing table tr:hover {
-    background-color: #f1f1f1;
-  }
   
   .admin-billing h2 {
     margin-bottom: 20px;
