--- a/client-app/src/Pages/CSS/StudentDetails.css
+++ b/client-app/src/Pages/CSS/StudentDetails.css
@@ -1,5 +1,3 @@
-
-
 .student-grid {
   display: flex;
   flex-wrap: wrap;
@@ -94,10 +92,6 @@
   border: 1.5px solid transparent; 
   border-color: var(--rest-but); /* Change border color without changing width */
 }
-
-
-
-
 
 .student-details {
   background-color: white;
@@ -201,11 +195,8 @@ input[type="file"] {
   display: none;
 }
 
-
-
-
 .delete-all-btn {
-  background-color: var(--rest-btn);
+  background-color: var(--rest-but);
   color: white;
   margin-left: 40%;
   padding: 10px 20px;
