--- a/client-app/src/Pages/CSS/StudentHome.css
+++ b/client-app/src/Pages/CSS/StudentHome.css
@@ -11,7 +11,7 @@
 .main1 {
   display: flex;
   flex: 1;
-  /* Remove margin-top to prevent shifting layout */
+  margin-top: 80px;
 }
 
 .content {
