--- a/client-app/src/Pages/CSS/Login.css
+++ b/client-app/src/Pages/CSS/Login.css
@@ -89,10 +89,30 @@
   text-decoration: none;
 }
 
-.forgot:hover {
+.forgot:hover{
   text-decoration: underline;
   cursor: pointer;
   color: #050A44;
+}
+
+.but-can {
+  background-color: var(--rest-but);
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  border-radius: 4px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  font-size: 14px;
+  width: 50%;
+}
+
+.but-can:hover {
+  background-color: var(--hov-but); /* Hover background color */
+  color: black; /* Hover text color */
+  border: 1.5px solid transparent; 
+  border-color: var(--rest-but); /* Change border color without changing width */
 }
 
 .but {
